--- a/style.css
+++ b/style.css
@@ -3,12 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Tauri&display=swap");
 
 body {
-  background: rgb(240, 183, 146);
-  background: linear-gradient(
-    90deg,
-    rgba(240, 183, 146, 0.8926974664679582) 59%,
-    rgba(237, 230, 209, 0.6780923994038748) 59%
-  );
+background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='40' patternTransform='scale(5) rotate(125)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(28,87.6%,59%,1)'/><path d='M0 0h10v20H0zM30 0v10H10V0zM10 10h10v20H10zM40 10v10H20V10zM20 20h10v20H20zM50 20v10H30V20zM30 30h10v20H30zM20 30v10H0V30zM10 20v10h-20V20zM30-10h10v20H30z'  stroke-width='6' stroke='hsla(19,100%,88%,1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(-240,-30)' fill='url(%23a)'/></svg>")
+
 }
 @media only screen and (max-width: 768px) {
   .box {
